--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "server" : "nodemon server/server.js",
-    "client" : "npm run start --prefix client",
-    "dev" : "concurrently \"npm run server \" \"npm run client \""
+    "server": "nodemon server/server.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run server \" \"npm run client \""
   },
   "author": "Bestar",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "http-proxy": "^1.18.1",
     "socket.io": "^4.7.4"
   },
   "devDependencies": {
